Bug 117024 - Selecting a form in navigator does not scroll to the page
Summary: Selecting a form in navigator does not scroll to the page
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2018-04-16 00:02 UTC by Gerhard Weydt
Modified: 2018-05-27 15:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerhard Weydt 2018-04-16 00:02:12 UTC
Steps to reproduce:
- Create a writer document with two pages (simply to ensure you need scrolling to view the objects)
- Insert a drawing object/form in the first paragraph, i.e. on page 1. The anchoring doesn't matter.
- Put the cursor on page 2.
- In the navigator, select the drawing object you just created (in the section "Drawing objects")

Expected behaviour: the drawing is selected and the part of the page containing the object is displayed: this happens for all other types of navigator objects I tested

Actual behaviour: the object is selected, but no scrolling to the page containing the object occurs. 

This is very annoying in large documents, and could probably be easily mended by copying code from some other item in the navigator

I put in release 5.2.3.3, because it's the first I could easily reproduce that; before that release (or about that) the drawing objects are not named automatically and therefore are not displayed in the navigator, so you cannot test the scenario directly. I don't think it worthwhile to test this in former versions with documents created in higher versions.
Comment 1 Dieter 2018-04-16 07:26:49 UTC
Reproducible for me with

Version: 6.1.0.0.alpha0+ (x64)
Build ID: 2325f9ac789cd12e5ecc9d239baf2558e1d678bb
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-04-05_00:37:47
Locale: en-US (de_DE); Calc: CL
Comment 2 Xisco Faulí 2018-04-17 12:02:24 UTC
Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.13; Render: default; 

Interestingly, it doesn't happen with images...
Comment 3 Xisco Faulí 2018-04-17 12:02:55 UTC
@Jim, one for you?
Comment 4 Jim Raykowski 2018-04-19 09:00:33 UTC
(In reply to Xisco Faulí from comment #3)
> @Jim, one for you?

Sure, thanks for asking :)

Here is a link to a patch for this:
https://gerrit.libreoffice.org/#/c/53142/
Comment 5 Commit Notification 2018-04-20 21:57:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0fab443fc5016d3088e485210a13f121a1ec1ee9

tdf#117024 Make Navigator Drawing objects scroll

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gerhard Weydt 2018-05-01 21:21:32 UTC
tested the patch in
Version: 6.1.0.0.alpha1+
Build ID: 8a2745e1beee722c8c9691c397e493cc1160bedf
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-04-30_23:24:36
Locale: de-DE (de_DE); Calc: group

in Writer and for completeness sake also in Draw and Calc. Wrks for me.
Comment 7 Xisco Faulí 2018-05-02 08:39:11 UTC
Adjusting status correctly...
Comment 8 Commit Notification 2018-05-21 14:05:26 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e3ffa913e5729766803a76b765ab2bb3436c12f6

Improve placement of tdf#117024/tdf#117283 patches

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gerhard Weydt 2018-05-27 15:21:40 UTC
It still works after the second patch, status remains the same.