tdf#117024 Make Navigator Drawing objects scroll

Change-Id: I6ef690306e1988a4de1d9407fe9ae9f2ea1736b1
Reviewed-on: https://gerrit.libreoffice.org/53142
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>