sw/source/uibase/utlui/content.cxx
@@ -3473,6 +3473,9 @@ void SwContentTree::GotoContent(SwContent* pCnt)
                         if( pPV )
                         {
                             pDrawView->MarkObj( pTemp, pPV );
+                            m_pActiveShell->EnterStdMode();
+                            bSel = true;
+                            break;
                         }
                     }
                 }
